kubernetes/catalog/mongodb/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/jason-bean/docker-templates/master/jasonbean-repo/MongoDB.xml
# Category: Network-Other
# Stars: 10724 | Downloads: 4746326173
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: mongodb
  labels:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: mongodb
          image: mongo
          # No environment variables defined
          ports:
            - containerPort: 27017
              protocol: TCP
              name: host-port-1
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 30
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 30
            failureThreshold: 10
          volumeMounts:
            - name: mongodb-data-0
              mountPath: "/data/db"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: mongodb-data-0
        persistentVolumeClaim:
          claimName: mongodb-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mongodb
  labels:
    app.kubernetes.io/name: mongodb
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: host-port-1
  type: ClusterIP
