kubernetes/catalog/mongodb/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mongodb
  namespace: mongodb
  labels:
    app.kubernetes.io/name: mongodb
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mongodb.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: mongodb
          port: 27017
  tls:
    secretName: int-rlservers-com-tls
